applications/charts/home/host/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: host
  name: host
spec:
  selector:
    app: host
  type: ClusterIP
  ports:
    - name: host
      port: 80
      targetPort: 80
